--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.jamonapi</groupId>
+            <artifactId>jamon</artifactId>
+            <version>2.81</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <version>${spring.boot.version}</version>
@@ -33,7 +39,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>8.5.8</version>
+            <version>8.5.12</version>
         </dependency>
 
         <dependency>
